<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:padding="25dp"
    tools:context=".imccalculator.ImcActivity">
    <!--android:layout_margin="30dp"-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/cvFemale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_male"
                app:tint="@color/white"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/male"
                android:textAllCaps="true"
                android:textColor="@color/white"></TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFemale"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cvMale"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_female"
                app:tint="@color/white"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textColor="@color/white"></TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvMale">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/height"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"></TextView>

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="120 cm"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="60sp"></TextView>

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200"></com.google.android.material.slider.RangeSlider>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvWeight"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/cvAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvHeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"></TextView>

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="50"
                android:textColor="@color/white"
                android:textSize="50sp"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubstractWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_substract"
                    app:tint="@color/white"
                    android:layout_marginEnd="10dp"
                    >
                </com.google.android.material.floatingactionbutton.FloatingActionButton>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint = "@color/white"
                    android:src="@drawable/ic_plus"
                    >
                </com.google.android.material.floatingactionbutton.FloatingActionButton>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAge"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cvWeight"
        app:layout_constraintTop_toBottomOf="@+id/cvHeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/age"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="25"
                android:textColor="@color/white"
                android:textSize="50sp">

            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubstractAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_substract"
                    app:tint="@color/white"
                    android:layout_marginEnd="10dp"
                    >
                </com.google.android.material.floatingactionbutton.FloatingActionButton>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusAge"
                    app:tint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_plus"
                    >
                </com.google.android.material.floatingactionbutton.FloatingActionButton>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvWeight">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>